fixed last problems with params in post and update
